# Healthcare-Assistant

./: .gitignore  LICENSE  README.md  demo_multimodal.py  pyproject.toml  requirements.txt  start_services.py  test_api.py
backend/: api.py  config.py  main.py  models.py  tools.py
controllers/: __init__.py  mental_health_controller.py
core/: agent.py  audio_processor.py  rag_manager.py  tools.py
faiss_index/: index.pkl
frontend/: app.py  streamlit_app.py
frontend/components/: __init__.py  audio_recorder.py  chat_interface.py  knowledge_base.py  multimodal_panel.py  session_manager.py  sidebar.py
frontend/utils/: __init__.py  config.py  styling.py
models/: __init__.py  api_models.py  business_models.py
views/: __init__.py  gradio_ui.py
